--- a/css/styles.css
+++ b/css/styles.css
@@ -1,62 +1,75 @@
 * {
-	font-family: "Courier New", Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
 }
+
 .row-reader {
-	margin: 0 auto;
-	padding: 0 0;
+  margin: 0 auto;
+  padding: 0 0;
 }
+
 .row-content {
-	margin: 0 auto;
-	padding: 50px 0;
-	border-bottom: 1px ridge;
-	min-height: 25rem;
+  margin: 0 auto;
+  padding: 50px 0;
+  border-bottom: 1px ridge;
+  min-height: 25rem;
 }
+
 .jumbotron {
-	margin: 0 auto;
-	padding: 4.375 0;
-	color: #84a6c5;
+  margin: 0 auto;
+  padding: 4.375 0;
+  color: #84a6c5;
 }
+
 .footer {
-	background: #9fb9a9;
-	margin: 0 auto;
-	padding: 1.25rem 0;
+  background: #9fb9a9;
+  margin: 0 auto;
+  padding: 1.25rem 0;
 }
+
 address {
-	font-size: 80%;
-	margin: 0;
-	color: black;
+  font-size: 80%;
+  margin: 0;
+  color: black;
 }
+
 body {
-	padding-top: 3.125rem;
-	z-index: 0;
+  padding-top: 3.125rem;
+  z-index: 0;
 }
+
 .navbar-dark {
-	background-color: #004a99;
+  background-color: #004a99;
 }
+
 .tab-content {
-	border: 1px solid #ddd;
-	border-top: none;
-	padding: 0.625rem;
+  border: 1px solid #ddd;
+  border-top: none;
+  padding: 0.625rem;
 }
+
 .carousel {
-	background: #004a99;
+  background: #004a99;
 }
 .carousel .carousel-item {
-	height: 18.75rem;
+  height: 18.75rem;
 }
 .carousel .carousel-item img {
-	position: absolute;
-	top: 0;
-	left: 0;
-	min-height: 18.75rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-height: 18.75rem;
 }
+
 #carouselButton {
-	position: absolute;
-	right: 0;
-	bottom: 0;
+  position: absolute;
+  right: 0;
+  bottom: 0;
 }
+
 h1,
 h2,
 h3 {
-	font-weight: 600;
+  font-weight: 600;
 }
+
+/*# sourceMappingURL=styles.css.map */
